--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "duktown",
   "version": "0.1.0",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "http-proxy-middleware": "^2.0.6",
     "install": "^0.13.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
