--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.30.0",
     "http-proxy-middleware": "^2.0.6",
     "install": "^0.13.0",
     "moment": "^2.29.4",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
+    "source-map-loader": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
