--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
-    "source-map-loader": "^4.0.2",
+    "react-spring": "^9.7.3",
     "sockjs-client": "^1.6.1",
+    "source-map-loader": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
