[REFACTOR] https 변경

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "duktown",
   "version": "0.1.0",
-  "proxy": "http://www.duktown.site",
+  "proxy": "https://www.duktown.site",
   "private": true,
   "dependencies": {
     "@stomp/stompjs": "^7.0.0",
